# the-sink

./: .editorconfig  .env.example  .gitignore  README.md  docker-compose.yml
.docker-compose/client/: Dockerfile  entrypoint.sh
.docker-compose/pgadmin/: Dockerfile  entrypoint.sh
.docker-compose/server/: Dockerfile  entrypoint.sh
.github/: CODEOWNERS  dependabot.yml
.github/scripts/: slw--repo--cleanup
.github/workflows/: ci.yml  deploy.yml
app/server/: .gitignore  Makefile  README.md  pyproject.toml
app/server/migrations/versions/: 272b6015eb36_rename_state_into_status.py  4fc4a8dcdf39_add_project_creation_date_column.py  58046549b727_create_projects_and_add_user_roles.py  5a35979619f8_add_user_status.py  9baab1ce8911_create_users_table.py  b36c9b299df1_alter_entity_tables_add_timestamps.py
app/server/src/api/: __init__.py
app/server/src/api/auth/: __init__.py
app/server/src/api/blueprints/: auth.py  db_commands.py
app/server/src/api/cognito/: __init__.py  config.py  user.py
app/server/src/api/config/: __init__.py
app/server/src/api/cors/: __init__.py
app/server/src/api/database/: __init__.py
app/server/src/api/models/: __init__.py  project.py  user.py
app/server/src/api/models/mixins/: entity.py  has_author.py  has_timestamps.py  workflow.py
app/server/src/api/principal/: __init__.py  actions.py  operation.py  role.py
app/server/src/api/restful/: __init__.py  example.py  projects.py  restful_api.py  restful_base.py  restful_list_base.py  users.py
app/server/src/api/schema/: __init__.py  dict_defaults.py  schema.py
app/server/tests/: conftest.py  test_factory.py  test_test.py
app/server/tests/blueprints/: test_auth.py
app/server/tests/cognito/: test_plugin.py  test_user.py
app/server/tests/config/: test_config.py
app/server/tests/models/: test_project.py
app/server/tests/models/mixins/: test_entity.py  test_workflow.py
app/server/tests/principal/: role_actions.py  test_principal_setup.py
app/server/tests/restful/: test_case_list_base.py  test_projects.py  test_projects_list.py  test_users.py  test_users_list.py
app/server/tests/schema/: test_dict_defaults.py  test_schema.py
aws/: Dockerfile  buildspec.yaml  cfn-template-configuration-prod.json  cfn-template-configuration-stage.json  cfn-template-configuration-uat.json  cfn-template.yml
(+273 files in other folders)
