[build-system]
requires = [
    "setuptools",
]

[project]
name = "api"
version = "1.1"
requires-python = ">= 3.11"
dependencies = [
    "Flask==3.0.3",
    "Flask-Caching==2.3.0",
    "flask-cognito-lib==1.9.1",
    "Flask-Cors==5.0.0",
    "Flask-Login==0.6.3",
    "Flask-Migrate==4.0.7",
    "Flask-Principal==0.4.0",
    "Flask-Restful==0.3.10",
    "Flask-SQLAlchemy==3.1.1",
    "gunicorn==22.0.0",
    "jwcrypto==1.5.6",
    "marshmallow==3.23.3",
    "psycopg2-binary==2.9.10",
    "pyjwt==2.9.0",
    "python-dotenv==1.0.1",
    "requests==2.32.3",
    "setuptools==70.3.0",
    "transitions==0.9.2",
    "Werkzeug==3.0.5",
]

[project.optional-dependencies]
dev = [
    "autopep8==2.3.1",
    "black==24.10.0",
    "coverage==7.6.4",
    "flake8==7.1.1",
    "flake8-quotes==3.4.0",
    "Flake8-pyproject",
    "mypy==1.13.0",
    "pylint==3.3.1",
    "pytest==8.3.3",
    "types-Flask==1.1.6",
    "types-Flask-Cors==4.0.0.20240828",
    "types-Flask-Migrate==4.0.0.20240311",
    "types-requests==2.32.0.20241016",
]

local = [
    "debugpy",
    "pydevd-pycharm",
]

[tool.autopep8]
in-place = true
recursive = true
aggressive = 3
max_line_length = 100

[tool.black]
line-length = 100

[tool.flake8]
count = true
statistics = true
max-complexity = 10
max-line-length = 100
inline-quotes = '"'
multiline-quotes = '"'
docstring-quotes = '"""'

[tool.pylint]
recursive = true
max-line-length = 100
disable = [
    # missing-module-docstring
    "C0114",
    # missing-function-docstring
    "C0116",
]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[tool.mypy]
strict_optional = true
no_implicit_optional = true
check_untyped_defs = true
disallow_untyped_defs = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
disallow_untyped_decorators = false
warn_no_return = true
warn_return_any = true
warn_unreachable = true
plugins = [
    "sqlalchemy.ext.mypy.plugin",
]

[[tool.mypy.overrides]]
module = [
    "flask_login.*",
    "flask_cognito_lib.*",
    "flask_principal.*",
    "flask_restful.*",
    "db.Model",
]
ignore_missing_imports = true

[tool.coverage.run]
source = [
    "src",
]

[tool.coverage.report]
fail_under = 85

[tool.coverage.html]
directory = "htmlcov"
